
	Adapted from patch by Stas Boukarev.

2009-05-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([test] fancy-symbol-names): Add cases involving #|
	... |# style comments. Currently failing.

	Reported by Madhu.

2009-05-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-goto-location-position): Only go to match-beginning if
	search succeeded.

	Patch by Madhu.

2009-05-23  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (break-in-sldb): Honor *break-on-signals*.
	That means that we can't use SIGNAL here and we have to invoke
	SLDB directly.
	(condition-for-break): New helper.
	Reported by Bill St. Clair.

2009-05-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-symbol-at-point): Sometimes we can be too good,
	e.g. in "|# (defun foo () (getf" the above would return nil
	because the vertical bar is not terminated. The user probably
	wants "getf" nontheless.

	Reported by Madhu.

2009-05-19  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (sldb-restartable-frame-line-face): Set a default value.
	(sldb-frame-restartable-p): New.
	(sldb-compute-frame-face): Use it.
	(sldb-show-frame-details): Use it, too.

2009-05-19  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-source-path-parser.lisp (read-and-record-source-map):
	ignore errors during the call to READ, so that we don't the
	current version of the form we are looking at contains eg.
	uninternable symbols.

2009-05-19  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (source-note-to-source-location): Always
	test *temp-file-map* first, because the temp-file might actually
	exist during compilation but no longer when Emacs tries to open
	it.
	(slime-goto-location-buffer): Don't create buffers for
	non-existent files.

2009-05-18  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime.el (slime-description-autofocus): New variable.
	(slime-show-description): Use it to decide if description
	buffers should receive focus automatically.